# zoonotic-honest-eval

./: .env.example  .gitignore  EXPLAINER.md  FINDINGS.md  PAPER.md  PAPER_FACTS.md  README.md  modal_app.py  pyproject.toml
data/: __init__.py  build_labels.py  build_splits.py  download_clover.py  download_genomes.py  download_hp3.py  download_ictv_vmr.py  download_virion.py
docs/: discussion_section.md  improvement_roadmap.md  index.html  prior_work_and_fixes.md  publication_and_generalization.md  raising_the_ceiling.md
env/: README.md
features/: __init__.py  composition.py  embeddings.py  extra.py  metadata.py
models/: __init__.py  attention_mil.py  baselines.py  dataset.py  diagnostics.py  eval_ladder.py  evaluate.py  fusion_model.py  generalize.py  hc_local.py  hillclimb.py  plot_ladder.py  rebuild_results.py  train.py
results/: OVERNIGHT_SUMMARY.md  canonical_results.json  confidence_intervals.json  diagnostics.json  diagnostics_canonical.json  fusion_contrasts.csv  generalization_journal.md  generalize_runs.csv  genomes_summary.json  labels_summary.json  ladder.csv  leaderboard.csv  metrics_composition_logreg.csv  metrics_composition_logreg__mammal.csv  metrics_composition_xgb.csv  metrics_composition_xgb__mammal.csv  metrics_effort_only.csv  metrics_effort_only__mammal.csv  metrics_esm_logreg.csv  metrics_esm_xgb.csv  metrics_family_prior.csv  metrics_family_prior__mammal.csv  metrics_prior.csv  metrics_prior__mammal.csv  pipeline_status.json  splits_summary.json
tests/: test_composition.py  test_controls.py  test_evaluate.py  test_splits.py
(+9 files in other folders)
