[project]
name = "zoonotic"
version = "0.0.0"
description = "Zoonotic-potential prediction (v0): honest evaluation of genome-based human-infection prediction."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [{ name = "Linus" }]

# Base deps are intentionally light and pure-Python-friendly so the data/eval
# layer installs cleanly on CPU. Heavy embedding deps live in the optional
# `embeddings` group and are only needed for Phase 2 foundation-model features.
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "polars>=1.0",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "biopython>=1.83",
    "matplotlib>=3.8",
    "requests>=2.31",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
# Phase 2 foundation-model embeddings. Installed separately:
#   uv pip install -e ".[embeddings]"
embeddings = [
    "torch>=2.2",
    "fair-esm>=2.0",
    "transformers>=4.40",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]
# Cloud orchestration (run the pipeline on Modal instead of locally).
cloud = [
    "modal>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zoonotic", "features", "models", "data"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
